[package]
name = "geotime"
authors = ["Eric Walker <eric.walker@gmail.com>"]
description = "Provides signed 128-bit timestamps that are compatible with Unix time_t and anchored at the Unix epoch."
edition = "2021"
license = "MIT"
version = "0.0.6"
documentation = "https://docs.rs/geotime/latest/geotime/"
repository = "https://github.com/emwalker/geotime"

[dependencies]
base64 = "0"
chrono = "0"
data-encoding = "2"
data-encoding-macro = "0"
hex = "0"
human_format = "1"
quick-error = "2"
serde = "1"
serde_test = "1"
